JDK 1.2 compatibility
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@274935 13f79535-47bb-0310-9956-ffa450edef68